Feat: POST /auth/logout #7
