# src/routes/auth.route.ts
@@ -1,5 +1,6 @@
 import { Router } from "express";
 import { resetPassword, login, logout, oauth, signup } from "../controllers";
+import { authChecker } from "../middlewares";
 
 export default () => {
   const router = Router();
@@ -7,7 +8,7 @@ export default () => {
   router.post("/auth/signup", signup);
   router.get("/auth/oauth", oauth);
   router.post("/auth/login", login);
-  router.post("/auth/logout", logout);
+  router.post("/auth/logout", authChecker, logout);
   router.post("/auth/reset-password", resetPassword);
 
   return router;
